# ChangeLog for app-forensics/samhain
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-forensics/samhain/ChangeLog,v 1.10 2008/05/21 15:50:55 dev-zero Exp $

  21 May 2008; Tiziano Müller <dev-zero@gentoo.org> samhain-2.1.3.ebuild,
  samhain-2.2.0.ebuild:
  Changed dependency for postgresql from dev-db/postgresql to
  virtual/postgresql-server

  02 Jul 2007; Piotr Jaroszyński <peper@gentoo.org> samhain-2.1.3.ebuild,
  samhain-2.2.0.ebuild:
  (QA) RESTRICT clean up.

  13 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
  add <herd>no-herd</herd>

  28 Apr 2007; Torsten Veller <tove@gentoo.org> samhain-2.2.0.ebuild:
  Use newinitd

  24 Jan 2007; Marius Mauch <genone@gentoo.org> samhain-2.1.3.ebuild,
  samhain-2.2.0.ebuild:
  Replacing einfo with elog

  23 Nov 2006; Francesco Riosa <vivo@gentoo.org> samhain-2.1.3.ebuild,
  samhain-2.2.0.ebuild:
  dev-db/mysql => virtual/mysql

  14 Jul 2006; Luca Longinotti <chtekk@gentoo.org> samhain-2.1.3.ebuild,
  samhain-2.2.0.ebuild:
  Fix bug #140385.

*samhain-2.2.0 (24 May 2006)
*samhain-2.1.3 (24 May 2006)

  24 May 2006; Luca Longinotti <chtekk@gentoo.org> -samhain-2.1.1a.ebuild,
  +samhain-2.1.3.ebuild, +samhain-2.2.0.ebuild:
  Fix bug #125035 by adding both 2.1.3 and 2.2.0 to the tree, remove 2.1.1a.
  Fix bug #130988, the libdir is now created if not emerged in stealth mode.

  26 Dec 2005; Luca Longinotti <chtekk@gentoo.org> samhain-2.1.1a.ebuild:
  Fix bug #116739.

*samhain-2.1.1a (25 Dec 2005)

  25 Dec 2005; Luca Longinotti <chtekk@gentoo.org> +metadata.xml,
  +samhain-2.1.1a.ebuild:
  Samhain ebuild, fix bug #34243. Thanks to Andrea Barisani and Jared Breland
  for the initial ebuild in Bugzilla.
