@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<herd>forensics</herd>
-	<maintainer>
-		<email>forensics@gentoo.org</email>
-	</maintainer>
+<herd>forensics</herd>
+<maintainer>
+  <email>forensics@gentoo.org</email>
+</maintainer>
+<use>
+  <flag name='dbtool'>Add patch for dbtool interface from PyFlag</flag>
+</use>
 </pkgmetadata>
