@@ -1,6 +1,9 @@
 # ChangeLog for app-forensics/sleuthkit
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-forensics/sleuthkit/ChangeLog,v 1.32 2007/09/28 17:07:21 philantrop Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-forensics/sleuthkit/ChangeLog,v 1.33 2008/07/31 09:51:13 ulm Exp $
+
+  31 Jul 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
+  Add USE flag description to metadata wrt GLEP 56.
 
   28 Sep 2007; Wulf C. Krueger <philantrop@gentoo.org>
   sleuthkit-2.09.ebuild:
