@@ -1,6 +1,9 @@
 # ChangeLog for app-forensics/samhain
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-forensics/samhain/ChangeLog,v 1.10 2008/05/21 15:50:55 dev-zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-forensics/samhain/ChangeLog,v 1.11 2008/07/31 09:46:44 ulm Exp $
+
+  31 Jul 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
+  Add USE flag description to metadata wrt GLEP 56.
 
   21 May 2008; Tiziano Müller <dev-zero@gentoo.org> samhain-2.1.3.ebuild,
   samhain-2.2.0.ebuild:
